<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_rect_fill"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:padding="12dp"
            android:text="@string/add_music"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2.0dp"
            android:background="#E6E5E5"/>

        <TextView
            android:id="@+id/pickButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4CAF50"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/from_gallery"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2.0dp"
            android:background="#E6E5E5"/>

        <TextView
            android:id="@+id/recordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2196F3"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/from_record"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5.0dp"
            android:background="#E6E5E5"/>

        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/cancel"/>

    </LinearLayout>

</FrameLayout>





























