<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="30dp"
    android:background="@drawable/white_rect_fill">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:text="@string/about_msg"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LAYARI"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="@color/text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="http://www.satuhati.my"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:textColorLink="@color/colorPrimaryDark"
                android:autoLink="web"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:text="@string/about_msg2"/>
        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/okay"
            android:textSize="16sp"
            android:autoLink="email"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:gravity="center"/>
    </LinearLayout>
</FrameLayout>





























