<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_signup"
    android:id="@+id/activity"
    tools:context=".main.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SATUHATI"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:padding="20dp"
            android:gravity="center"/>

        <FrameLayout
            android:id="@+id/pictureFrame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/pictureBox"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:civ_border_width="2dp"
                app:civ_border_color="#fff"
                android:scaleType="centerCrop"
                android:src="@drawable/anonymous"/>
            <ImageView
                android:id="@+id/cameraButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:alpha="0.1"
                android:layout_marginTop="62dp"
                android:layout_gravity="center_horizontal|bottom"
                android:src="@drawable/cameraico"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:paddingTop="20dp"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:layout_width="0px"
                        android:layout_height="0px" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/circular_shadow">
                        <ImageView
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="15dp"
                            android:background="@drawable/ic_user"/>
                        <EditText
                            android:id="@+id/nameBox"
                            android:layout_width="0px"
                            android:layout_weight="1"
                            android:background="@null"
                            android:textColor="@color/text"
                            android:textColorHint="#cfcfcf"
                            android:inputType="textCapWords"
                            android:layout_marginRight="10dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:singleLine="true"
                            android:layout_marginLeft="10sp"
                            android:layout_gravity="center"
                            android:textSize="16sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:orientation="horizontal"
                        android:background="@drawable/circular_shadow">
                        <ImageView
                            android:layout_width="18dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="15dp"
                            android:background="@drawable/ic_mail"/>
                        <EditText
                            android:id="@+id/emailBox"
                            android:layout_width="0px"
                            android:layout_weight="1"
                            android:background="@null"
                            android:textColor="@color/text"
                            android:textColorHint="#cfcfcf"
                            android:inputType="textEmailAddress"
                            android:layout_marginRight="10dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:singleLine="true"
                            android:layout_marginLeft="10sp"
                            android:layout_gravity="center"
                            android:textSize="16sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:orientation="horizontal"
                        android:background="@drawable/circular_shadow">
                        <ImageView
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="15dp"
                            android:background="@drawable/ic_lock"/>
                        <EditText
                            android:id="@+id/passwordBox"
                            android:layout_width="0px"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:singleLine="true"
                            android:textColor="@color/text"
                            android:textColorHint="#cfcfcf"
                            android:inputType="textPassword"
                            android:layout_marginLeft="10sp"
                            android:layout_gravity="center"
                            android:textSize="16sp"
                            android:background="@null"/>
                        <ImageButton
                            android:id="@+id/showButton"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:src="@drawable/eyeunlock"
                            android:layout_gravity="center"
                            android:layout_marginRight="20dp"
                            android:background="@android:color/transparent"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/btn_signup"
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:text="@string/sign_up"
                        android:textAllCaps="true"
                        android:textColor="#ffffff"
                        android:textSize="19dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/button_shadow"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/lb2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/colorPrimaryDark"
                            android:text="@string/have_account"/>
                        <TextView
                            android:id="@+id/btn_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:paddingLeft="15dp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDark"
                            android:text="@string/login"
                            android:textAllCaps="true"/>
                    </LinearLayout>

                </LinearLayout>

            </ScrollView>
        </LinearLayout>
    </LinearLayout>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loading_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:indicator="LineSpinFadeLoader"
        app:indicator_color="#F53700" />

</FrameLayout>


























